--- a/ClassLibrary1/Business.csproj
+++ b/ClassLibrary1/Business.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
